added identities manager, and some fixes