@@ -81,8 +81,8 @@ public class FrostSearchResultMessageObject implements TableMember {
      */
     public Object getValueAt(int column) {
         switch(column) {
-            case 0: return new Boolean(messageObject.isFlagged());
-            case 1: return new Boolean(messageObject.isStarred());
+            case 0: return Boolean.valueOf(messageObject.isFlagged());
+            case 1: return Boolean.valueOf(messageObject.isStarred());
             case 2: return ""+messageObject.getIndex();
             case 3: return messageObject.getFromName();
             case 4: return messageObject.getBoard().getName();
